--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.4.0
+  firebase_core: ^2.7.1
+  firebase_auth: ^4.3.0
+  google_sign_in: ^6.0.2
+  salomon_bottom_bar: ^3.3.1
+  dot_navigation_bar: ^1.0.1+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  google_fonts: ^4.0.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -62,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - images/
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
