--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
-  salomon_bottom_bar: ^3.3.1
+  salomon_bottom_bar: ^3.3.1 #can be removed
   dot_navigation_bar: ^1.0.1+4
   google_fonts: ^4.0.3
   provider: ^6.0.5 #can be removed
