UI/UX redesign (Auth Page)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   provider: ^6.0.5 #can be removed
   font_awesome: ^5.10.1
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,11 +57,19 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.2.19
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
+############################FOR SPLASH SCREEN######################
+flutter_native_splash:
+  image: assets/bbLogo.png
+  color: "#6A0D0D"
+
+###############################END#################################
 flutter:
 
   # The following line ensures that the Material Icons font is
