--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ flutter:
   assets:
     - assets/
     - images/
+    - assets/other/
+
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
