Forgot Password done

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>718638126645-hcmb4dq61qhqdm0su72bf51fot7ogd2t.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.718638126645-hcmb4dq61qhqdm0su72bf51fot7ogd2t</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>718638126645-1h865rldnfaj6atam9rsegtfs5vgncsn.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyClTaAp0pbtZtc48WR-4O07SBGfSFzlu84</string>
 	<key>GCM_SENDER_ID</key>
