--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,19 +22,10 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
   firebase_core: ^2.7.1
@@ -46,6 +37,7 @@ dependencies:
   provider: ^6.0.5 #can be removed
   font_awesome: ^5.10.1
   shared_preferences: ^2.0.5
+  connectivity_plus: ^3.0.4
 
 
 
@@ -60,10 +52,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.2.19
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 
 ############################FOR SPLASH SCREEN######################
 flutter_native_splash:
@@ -75,18 +64,15 @@ flutter_native_splash:
 
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
     - images/
     - assets/other/
 
-    # - images/a_dot_ham.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
