--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
+  cloud_firestore: ^4.5.2
+
   salomon_bottom_bar: ^3.3.1 #can be removed
   dot_navigation_bar: ^1.0.1+4
   google_fonts: ^4.0.3
@@ -38,6 +40,7 @@ dependencies:
   font_awesome: ^5.10.1
   shared_preferences: ^2.0.5
   connectivity_plus: ^3.0.4
+  awesome_snackbar_content: ^0.1.3
 
 
 
