--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   shared_preferences: ^2.0.5
   connectivity_plus: ^3.0.4
   awesome_snackbar_content: ^0.1.3
+  responsive_sizer: ^3.1.1
+  #asdfasdf///
+  liquid_swipe: ^3.1.0
+  smooth_page_indicator: ^1.1.0
+  intro_screen_onboarding_flutter: ^1.0.0
+  concentric_transition: ^1.0.3
 
 
 
@@ -74,6 +80,7 @@ flutter:
     - assets/
     - images/
     - assets/other/
+    - images/onboarding_page/
 
 
 
