--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
   cloud_firestore: ^4.5.2
+  flutter_svg: ^2.0.5
 
   salomon_bottom_bar: ^3.3.1 #can be removed
   dot_navigation_bar: ^1.0.1+4
@@ -49,6 +50,8 @@ dependencies:
   #concentric_transition: ^1.0.3
   #VALIDATORS
   validators: ^3.0.0
+  flutter_slidable: ^3.0.0
+  fl_chart: ^0.62.0
 
 
 
