--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   camera: ^0.10.5+2
   permission_handler: ^10.2.0
   image_picker: ^0.8.7+5
+  flutter_heatmap_calendar: ^1.0.5
 
 
 
