--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   permission_handler: ^10.2.0
   image_picker: ^0.8.7+5
   flutter_heatmap_calendar: ^1.0.5
+  flutter_markdown: ^0.6.15
 
 
 
