--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
+
+
 
 dependencies:
   flutter:
@@ -34,7 +36,6 @@ dependencies:
   cloud_firestore: ^4.5.2
   flutter_svg: ^2.0.5
 
-  dot_navigation_bar: ^1.0.1+4
   flutter_snake_navigationbar: ^0.6.1
 
   google_fonts: ^4.0.3
@@ -60,6 +61,9 @@ dependencies:
   flutter_markdown: ^0.6.15
 
 
+#testing
+  honey: any
+
 
 
 
@@ -68,11 +72,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.2.19
 
