--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^6.0.2
   cloud_firestore: ^4.5.2
   flutter_svg: ^2.0.5
+  flutter_custom_clippers: ^2.1.0
 
   flutter_snake_navigationbar: ^0.6.1
 
