--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,9 @@
 name: budget_bud
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 2.0.0+1
 
 environment:
@@ -62,11 +49,21 @@ dependencies:
   flutter_markdown: ^0.6.15
 
 
+
+
 #testing
   honey: any
 
   #updater:
   upgrader: ^7.0.2
+  http: ^0.13.6
+  flutter_html: ^3.0.0-beta.2
+  liquid_pull_to_refresh: ^3.0.1
+  awesome_notifications: ^0.6.19
+  loading_animation_widget: ^1.2.0+4
+  flutter_toggle_tab: ^1.3.0
+  page_view_dot_indicator: ^2.1.0
+  loop_page_view: ^1.2.2
 
 
 
