--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_toggle_tab: ^1.3.0
   page_view_dot_indicator: ^2.1.0
   loop_page_view: ^1.2.2
+  google_maps_flutter: ^2.3.0
 
 
 
