--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# exclude the API key from version control
+env.g.dart
+*.env
+.env
