--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   google_maps_flutter: ^2.3.0
 
 
-
+  flutter_dotenv:
 
 
 
@@ -104,7 +104,9 @@ flutter:
     - assets/other/
     - assets/pointer/
     - assets/category/
+    - assets/no_data_found/
     - images/onboarding_page/
+    - .env
 
 
 
