--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.0+1
+version: 2.4.0+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -70,6 +70,7 @@ dependencies:
 
 
   flutter_dotenv:
+  package_info_plus: ^4.0.2
 
 
 
