--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
-  cloud_firestore: ^4.5.2
+  cloud_firestore: ^4.8.1
   flutter_svg: ^2.0.5
   flutter_custom_clippers: ^2.1.0
 
@@ -28,11 +28,11 @@ dependencies:
 
   flutter_snake_navigationbar: ^0.6.1
 
-  google_fonts: ^4.0.3
+  google_fonts: ^5.0.0
   provider: ^6.0.5 #can be removed
   shared_preferences: ^2.0.5
   connectivity_plus: ^3.0.4
-  awesome_snackbar_content: ^0.1.3
+  awesome_snackbar_content:
   responsive_sizer: ^3.1.1
   #asdfasdf///
   liquid_swipe: ^3.1.0
@@ -40,37 +40,39 @@ dependencies:
   #VALIDATORS
   validators: ^3.0.0
   flutter_slidable: ^3.0.0
-  fl_chart: ^0.62.0
+  fl_chart: ^0.63.0
 
   #ML KITS
-  google_mlkit_text_recognition: ^0.6.0
+  google_mlkit_text_recognition: ^0.8.1
   camera: ^0.10.5+2
   permission_handler: ^10.2.0
   image_picker: ^0.8.7+5
-  flutter_heatmap_calendar: ^1.0.5
   flutter_markdown: ^0.6.15
 
 
-
-
-#testing
+  #testing
   honey: any
 
   #updater:
   upgrader: ^7.0.2
-  http: ^0.13.6
+  http: ^1.0.0
   flutter_html: ^3.0.0-beta.2
   liquid_pull_to_refresh: ^3.0.1
-  awesome_notifications: ^0.6.19
+
   loading_animation_widget: ^1.2.0+4
   flutter_toggle_tab: ^1.3.0
   page_view_dot_indicator: ^2.1.0
   loop_page_view: ^1.2.2
-  google_maps_flutter: ^2.3.0
 
 
   flutter_dotenv:
   package_info_plus: ^4.0.2
+
+
+  #notifications
+  firebase_messaging:
+  awesome_notifications:
+
 
 
 
