--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   firebase_messaging:
   awesome_notifications:
   flutter_local_notifications: ^14.1.1
+  auto_size_text: ^3.0.0
 
 
 
