--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ dependencies:
   auto_size_text: ^3.0.0
   percent_indicator: ^4.2.3
 
+  chat_gpt_sdk:
+    git:
+      url: https://github.com/iampawan/Flutter-ChatGPT.git
+
 
 
 
