--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.4.0+1
+version: 2.6.0+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -75,10 +75,12 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   auto_size_text: ^3.0.0
   percent_indicator: ^4.2.3
+  timezone: ^0.9.2
 
   chat_gpt_sdk:
     git:
       url: https://github.com/iampawan/Flutter-ChatGPT.git
+  intl: ^0.18.0
 
 
 
@@ -141,6 +143,7 @@ flutter:
     - assets/budgetCategory/
     - assets/Line Graph/
     - assets/Pie Graph/
+    - assets/3dBudget/
     - images/onboarding_page/
     - .env
 
