--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   firebase_core:
   firebase_auth: ^4.3.0
-  google_sign_in: ^6.0.2
-  cloud_firestore: ^4.8.1
+  google_sign_in:
+  cloud_firestore:
   flutter_svg: ^2.0.5
   flutter_custom_clippers: ^2.1.0
 
@@ -139,7 +139,6 @@ flutter:
     - images/
     - assets/pointer/
     - assets/category/
-    - assets/no_data_found/
     - assets/budgetCategory/
     - assets/Line Graph/
     - assets/Pie Graph/
