--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
       url: https://github.com/iampawan/Flutter-ChatGPT.git
   intl: ^0.18.0
   emailjs: ^1.3.0
+  flutter_inappwebview: ^5.7.2+3
 
 
 
